# AQM

./: .gitignore  README.md  deploy.py  main.py  plot_serial.py  pyproject.toml  pyrightconfig.json  run.py  scd4x.py
lib/: ads1x15.py  bmp581.py  bno085.py  crowpanel.py  hdc302x.py  pms7003.py  scd4x.py  sgp41.py  sgp41_gas_index_algorithm.py  ssd1638.py  ssd1683.py
src/: crowpanel_example.py  main.py  scan.py
typings/micropython_esp32_stubs-1.27.0.post1.dist-info/: RECORD
typings/micropython_stdlib_stubs-1.27.0.dist-info/: METADATA  RECORD
typings/stdlib/_mpy_shed/: blockdevice.pyi  io_mp.pyi  mp_available.pyi
